--- a/lupa/Base.lproj/MainMenu.xib
+++ b/lupa/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14F25a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8173.3" systemVersion="15A244d" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8173.3"/>
     </dependencies>
@@ -671,7 +671,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="200" y="800" width="207" height="62"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <value key="minSize" type="size" width="207" height="62"/>
             <value key="maxSize" type="size" width="207" height="62"/>
             <view key="contentView" id="EiT-Mj-1SZ">
@@ -680,6 +680,7 @@
                 <subviews>
                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8yI-ZL-sxe">
                         <rect key="frame" x="20" y="20" width="138" height="22"/>
+                        <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="rdY-MO-ZOP">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -691,6 +692,7 @@
                     </textField>
                     <button horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HTP-9N-LPp">
                         <rect key="frame" x="164" y="17" width="25" height="25"/>
+                        <animations/>
                         <buttonCell key="cell" type="help" bezelStyle="helpButton" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="sIf-PP-E8H">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -707,8 +709,9 @@
                     <constraint firstItem="HTP-9N-LPp" firstAttribute="leading" secondItem="8yI-ZL-sxe" secondAttribute="trailing" constant="8" symbolic="YES" id="fEg-mV-t2j"/>
                     <constraint firstAttribute="trailing" secondItem="HTP-9N-LPp" secondAttribute="trailing" constant="20" symbolic="YES" id="p0B-W3-0ou"/>
                 </constraints>
+                <animations/>
             </view>
-            <point key="canvasLocation" x="141.5" y="-52"/>
+            <point key="canvasLocation" x="149.5" y="-498"/>
         </window>
     </objects>
 </document>
